# dvt-ce

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  dev-requirements.txt
.changes/: 1.9.10.md  1.9.2.md  1.9.3.md  1.9.4.md  1.9.5.md  1.9.6.md  1.9.7.md  1.9.8.md  1.9.9.md
.claude/: settings.json
.cursor/: README.md
core/: MANIFEST.in  README.md  hatch.toml  pyproject.toml  setup.py
core/dbt/: tracking.py  version.py
core/dbt/artifacts/resources/v1/: model.py  seed.py  snapshot.py  source_definition.py
core/dbt/cli/: params.py  requires.py
core/dbt/config/: project.py
core/dbt/contracts/graph/: unparsed.py
core/dbt/events/: logging.py
core/dbt/include/starter_project/: .gitignore
core/dbt/parser/: sources.py
core/dbt/task/docs/: index.html
core/dvt/: __init__.py  __version__.py  _pydantic_shim.py  compilation.py  dbt_shim.py  exceptions.py  version.py
core/dvt/adapters/: __init__.py
core/dvt/artifacts/resources/v1/: config.py  metric.py  semantic_model.py
core/dvt/cli/: __init__.py  flags.py  main.py  params.py  types.py
core/dvt/config/: parse_state.py  source_connections.py  target_resolver.py  user_config.py
core/dvt/context/: manifest.py  providers.py
core/dvt/contracts/graph/: manifest.py
core/dvt/docs/source/: conf.py
core/dvt/dvt_compilation/: dvt_compiler.py
core/dvt/dvt_runners/: federation_runner.py  pushdown_runner.py  runner_mixin.py
core/dvt/dvt_tasks/: dvt_build.py  dvt_clean.py  dvt_debug.py  dvt_docs.py  dvt_init.py  dvt_retry.py  dvt_run.py  dvt_seed.py  dvt_show.py  dvt_sync.py
core/dvt/dvt_tasks/lib/: __init__.py  cli_tools.py  cloud_connectors.py  compute_version.py  jdbc_drivers.py  native_connectors.py  spark_seed.py
core/dvt/events/: core_types_pb2.py  logging.py  types.py
core/dvt/extraction/: connection_mapper.py  sling_client.py  watermark_formatter.py
core/dvt/federation/: __init__.py  adapter_manager.py  dialect_fallbacks.py  duckdb_compute.py  dvt_cache.py  engine.py  optimizer.py  query_optimizer.py  spark_manager.py
core/dvt/federation/extractors/: athena.py  base.py  bigquery.py  databricks.py  duckdb.py  oracle.py  redshift.py  snowflake.py
core/dvt/federation/loaders/: base.py
core/dvt/graph/: queue.py  thread_pool.py
core/dvt/include/starter_project/: README.md  dbt_project.yml
core/dvt/parser/: manifest.py  schema_generic_tests.py
core/dvt/plugins/: manager.py
core/dvt/runners/: model_runner.py  seed_runner.py
core/dvt/sync/: adapter_installer.py  cloud_deps.py  duckdb_extensions.py  profiles_reader.py  sling_checker.py
core/dvt/task/: base.py  clean.py  debug.py  deps.py  init.py  retry.py  run.py  runnable.py  seed.py  show.py
core/dvt/task/docs/: generate.py
core/dvt/tasks/: build.py  debug.py  docs.py  init.py  retract.py  run.py  seed.py  show.py  sync.py
core/dvt/utils/: identifiers.py
docs/: BRANCHING_AND_REBASE.md  DVT_PARSE_DEV_TEAM_REVIEW.md  DVT_SYNC.md  RUNNING_DVT.md  TEAM_AGENTS.md  TEST_TEAM_FINDINGS.md  TEST_TEAM_STATUS.md  TRIAL_10_COKE_DB_PYPI.md  TRIAL_4_DVT_SYNC_CHECKLIST.md  TRIAL_5_FANTA_DB_FULL_FEATURES.md  TRIAL_6_COKE_DB_FULL_FEATURES.md  TRIAL_7_PEPSI_DB_FULL_FEATURES.md  USING_LOCAL_DVT_WITH_UV.md  trial_10_pyproject.toml  trial_5_pyproject.toml  trial_6_pyproject.toml  trial_7_pyproject.toml
(+118 files in other folders)
